--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@my-micro-service/common": "^1.0.5",
+    "@my-micro-service/common": "^1.0.8",
     "@types/cookie-session": "^2.0.49",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
@@ -30,6 +30,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
