--- a/payments/package.json
+++ b/payments/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@my-micro-service/common": "^1.0.9",
+    "@my-micro-service/common": "^1.0.11",
     "@types/cookie-session": "^2.0.49",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^18.2.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
