--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "next": "^15.3.3",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
     "dev": "next"
